Fix alignment

--- a/src/assets/stylesheets/styles.less
+++ b/src/assets/stylesheets/styles.less
@@ -10,12 +10,15 @@ body {
   position: relative;
   height: 100vh;
   overflow: hidden;
+  text-align: center;
 
+  border-radius:  0.3rem;
 
   video {
     object-fit: fill;
     min-width: 100%;
     min-height: 100%;
+    margin:0 -100%;
   }
 
   .btn-capture {
